--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,38 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <link rel="apple-touch-icon" href="images/icon.png"/>
+    <link rel="apple-touch-startup-image" href="images/icon.png" />
+    <style type="text/css">
+    body, div, canvas
+    {
+        image-rendering: optimizeSpeed;
+        -webkit-image-rendering: optimizeSpeed;
+        -webkit-interpolation-mode: nearest-neighbor;
+    }
+    body{padding:0; margin:0;font-size:12px;background-color:#000;}
+    body, html{height: 100%;}
+    #outer{height:100%; overflow:hidden; position:relative; width:100%;}
+    #outer[id]{display:table; position:static;}
+    #middle{position:absolute; top:50%;} /* for ie only*/
+    #middle[id]{display:table-cell; vertical-align:middle; position:static;}
+    </style>
+    <title>报刊先生</title>
+    <script type="text/javascript" src="quark.base-1.0.0.alpha.min.js"></script>
+    <!-- <script type="text/javascript" src="src/fishjoy.game.js"></script> -->
+    <script type="text/javascript" src="R.js"></script>
+    <script type="text/javascript" src="Utils.js"></script>
+    <script type="text/javascript" src="fishjoy.js"></script>
+    <script type="text/javascript" src="FishManager.js"></script>
+    <script type="text/javascript" src="FishGroup.js"></script>
+    <script type="text/javascript" src="views/Fish.js"></script>
+    <script type="text/javascript" src="views/Cannon.js"></script>
+    <script type="text/javascript" src="views/Bullet.js"></script>
+    <script type="text/javascript" src="views/Num.js"></script>
+    <script type="text/javascript" src="views/Player.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -11,6 +43,13 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <div id="outer">
+      <div id="middle">
+        <div id="container" style="position:relative;width:980px;height:545px;top:-50%;margin:0 auto;"></div>
+        <div id="msg"></div>
+      </div>
+    </div>
+    <div id="fps" style="position:absolute;top:0;left:0;color:#fff;"></div>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
